--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
+
+
 {
-  "name": "telegram_aggr_bot",
-  "version": "2.0.0",
+  "name": "telegram_bot",
+  "version": "1.0.0",
   "main": "bot.js",
-  "scripts": {
-    "start": "node bot.js"
-  },
   "dependencies": {
     "dotenv": "^17.2.2",
-    "node-fetch": "2",
+    "node-cron": "^4.2.1",
+    "node-fetch": "^2.7.0",
     "telegraf": "^4.16.3",
     "ws": "^8.18.3"
-  }
+  },
+    "scripts": {
+  "start": "node bot.js"
 }
+}
+
+
